--- a/Interface_code/Review_tool.ui
+++ b/Interface_code/Review_tool.ui
@@ -29,36 +29,14 @@
          <x>0</x>
          <y>0</y>
          <width>961</width>
-         <height>660</height>
+         <height>658</height>
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="4" column="3" alignment="Qt::AlignHCenter">
-         <widget class="QLineEdit" name="lineEdit"/>
-        </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label">
+        <item row="4" column="0">
+         <widget class="QPushButton" name="pushButton">
           <property name="text">
-           <string>Question View:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0" alignment="Qt::AlignLeft">
-         <widget class="QLabel" name="label_2">
-          <property name="font">
-           <font>
-            <pointsize>11</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>     Language</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="4" alignment="Qt::AlignHCenter">
-         <widget class="QPushButton" name="pushButton_3">
-          <property name="text">
-           <string>SELECT FILE</string>
+           <string>Review</string>
           </property>
          </widget>
         </item>
@@ -75,11 +53,45 @@
           </property>
          </spacer>
         </item>
+        <item row="5" column="1">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
         <item row="1" column="0" colspan="5">
          <widget class="QTextBrowser" name="textBrowser"/>
         </item>
-        <item row="4" column="1" alignment="Qt::AlignLeft">
-         <widget class="QComboBox" name="comboBox"/>
+        <item row="4" column="3" alignment="Qt::AlignHCenter">
+         <widget class="QLineEdit" name="lineEdit"/>
+        </item>
+        <item row="4" column="6">
+         <widget class="QCommandLinkButton" name="commandLinkButton">
+          <property name="text">
+           <string>View Benchmarking</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Question View:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="4" alignment="Qt::AlignHCenter">
+         <widget class="QPushButton" name="pushButton_3">
+          <property name="text">
+           <string>SELECT FILE</string>
+          </property>
+         </widget>
         </item>
         <item row="1" column="6">
          <widget class="QTabWidget" name="tabWidget">
@@ -95,60 +107,68 @@
             <height>16777215</height>
            </size>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::TabFocus</enum>
+          </property>
+          <property name="tabPosition">
+           <enum>QTabWidget::North</enum>
+          </property>
+          <property name="tabShape">
+           <enum>QTabWidget::Triangular</enum>
+          </property>
           <property name="currentIndex">
-           <number>2</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="tab">
            <attribute name="title">
             <string>Code Analysis</string>
            </attribute>
+           <layout class="QVBoxLayout" name="verticalLayout_2">
+            <item>
+             <widget class="QTableWidget" name="tableWidget">
+              <property name="frameShape">
+               <enum>QFrame::WinPanel</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Sunken</enum>
+              </property>
+              <property name="lineWidth">
+               <number>1</number>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </widget>
           <widget class="QWidget" name="tab_2">
            <attribute name="title">
             <string>Suggestions</string>
            </attribute>
+           <layout class="QVBoxLayout" name="verticalLayout_3">
+            <item>
+             <widget class="QTextEdit" name="textEdit"/>
+            </item>
+           </layout>
           </widget>
           <widget class="QWidget" name="tab_3">
            <attribute name="title">
             <string>Code Writing Errors</string>
            </attribute>
-           <widget class="QListView" name="listView">
-            <property name="geometry">
-             <rect>
-              <x>10</x>
-              <y>10</y>
-              <width>271</width>
-              <height>471</height>
-             </rect>
-            </property>
-           </widget>
+           <layout class="QVBoxLayout" name="verticalLayout">
+            <item>
+             <widget class="QListWidget" name="listWidget">
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </widget>
          </widget>
         </item>
-        <item row="5" column="1">
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="6" column="1" alignment="Qt::AlignHCenter">
-         <widget class="QPushButton" name="pushButton">
-          <property name="text">
-           <string>Review</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="6">
-         <widget class="QCommandLinkButton" name="commandLinkButton">
-          <property name="text">
-           <string>View Benchmarking</string>
+        <item row="6" column="0" colspan="6">
+         <widget class="QProgressBar" name="progressBar">
+          <property name="value">
+           <number>0</number>
           </property>
          </widget>
         </item>
@@ -174,6 +194,7 @@
     </property>
     <addaction name="actionConnect_To_IP"/>
     <addaction name="actionExit"/>
+    <addaction name="actionExit_2"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -186,12 +207,12 @@
   </widget>
   <action name="actionConnect_To_IP">
    <property name="text">
-    <string>Save report</string>
+    <string>Save</string>
    </property>
   </action>
   <action name="actionExit">
    <property name="text">
-    <string>Leaderboard</string>
+    <string>Save as</string>
    </property>
   </action>
   <action name="actionAbout">
@@ -207,6 +228,11 @@
   <action name="actionLogout_2">
    <property name="text">
     <string>Logout</string>
+   </property>
+  </action>
+  <action name="actionExit_2">
+   <property name="text">
+    <string>Exit</string>
    </property>
   </action>
  </widget>
